<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/Style_txt_Titre_App"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/marge_default"
        android:layout_marginTop="@dimen/marge_default"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/bouton_quitter_accueil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_croix" />

    <!--Bouton Mon potager-->
    <Button
        android:id="@+id/bouton_potager_accueil"
        style="@style/Style_Titre"
        android:layout_width="350dp"
        android:layout_height="158dp"
        android:background="@drawable/img_potager612x433"
        android:gravity="center_horizontal"
        android:text="@string/Bouton_Potager_Accueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bouton_rechercher_accueil"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="MissingConstraints" />


    <!--Bouton barre de recherche-->
    <Button
        android:id="@+id/bouton_rechercher_accueil"
        style="@style/Style_Titre"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:drawableStart="@drawable/ic_search"
        android:text="@string/Bouton_Rechercher_Accueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints" />








</android.support.constraint.ConstraintLayout>