<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mon_Legume_Activite">

    <ImageButton
        android:id="@+id/bouton_retour_leg"
        android:layout_width="@dimen/box_dimen"
        android:layout_height="@dimen/box_dimen"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Nom_Legume"
        style="@style/Style_Titre"
        android:layout_width="184dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:text="@string/Nom_Du_Légume_Simulation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="100dp">

        <LinearLayout
            android:id="@+id/ObjectifLayout"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/objectif_simu"
                style="@style/Style_Titre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Titre_Objectif_Legume" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ObservationLayout"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/observation_simu"
                style="@style/Style_Titre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Titre_Observation_Legume" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="@dimen/box_dimen"
            android:layout_height="@dimen/box_dimen"
            android:src="@drawable/ic_etape_preced" />

        <TextView

            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Etape_Légume" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/Numero_Etape"
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="@dimen/box_dimen"
            android:layout_height="@dimen/box_dimen"
            android:src="@drawable/ic_etape_suiv" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>